# c-

./: CMakeLists.txt
core/: box_print.cpp  fmt_printing.cpp  reversing_words.cpp  test.cpp
core/lec4/: backup.cpp  chunk.cpp  extend_algo.cpp
core/lec4/fromPath/: backup_data.txt  hello.cpp  testfile.txt
core/lec4/fromPath/dir/: file.txt
core/lec4/fromPath/inner/: easy.txt
core/lec4/fromPath/inner/ultrainner/megainner/: helloworld.txt
core/lec5/: 2d-points.cpp  anagrams.cpp  hasCycle.cpp  student-numbers.cpp  word-legth.cpp
lecture1/: task1.cpp  task2.cpp  task3.cpp  task5.cpp  task6.cpp
lecture2/iterators/: fast.cpp  iter1.cpp  iter2.cpp  iterators_main.txt  lec2_1_main_notes.txt
lecture2/tasks/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
lecture2/tasks_cw_v2/: task.cpp
lecture3/: comparators.cpp  lambdas_predicators.cpp  lecture3.cpp  remove_whitespace.cpp  task.cpp
lecture4/: notes.txt  task4.txt
lecture4/analysis/: file.txt
lecture4/files/: data.txt  write.txt
lecture4/palindromes/: palindromes____2.txt  palindromes_____1.txt
lecture4/task6/: task6.cpp
lecture4/tasks/: analisys.cpp  sudoku.cpp  task4.cpp  task5.cpp  tasks.cpp
lecture4/templates/: main.cpp
lecture4/workingFIles/: filesystem.cpp  main.cpp  readfile.cpp  writefile.cpp
lecture6/headers/: main.cpp
lecture6/headers/entity/point/: point.cpp  point.hpp
lecture6/headers/utils/math/: maths.cpp  maths.hpp
lecture6/headers/utils/printer/: printer.cpp  printer.hpp
lecture6/templates/: main.cpp  main2.cpp
lecture7/: Matrix.hpp  core_.cpp  task1.cpp
new/SFML/: main.cpp
new/lecture3/wykład/: main.cpp
new/lecture5/tasks/: task1.cpp
new/lecture5/wykład/: main.cpp
sfml_tasks/: task1.cpp
sfml_tasks/test/: main.cpp
sfml_tasks/test/Button/: Button.cpp  Button.hpp
sfml_tasks/test/Point/: Point.cpp  Point.hpp
